--- a/djangomission/requirements.txt
+++ b/djangomission/requirements.txt
@@ -1,6 +1,11 @@
 asgiref==3.2.10
+autopep8==1.7.0
 Django==3.1.14
 django-extensions==3.1.5
 djangorestframework==3.13.1
+djangorestframework-simplejwt==5.2.0
+pycodestyle==2.9.1
+PyJWT==2.5.0
 pytz==2022.2.1
 sqlparse==0.4.2
+toml==0.10.2
